--- a/FrontEnd/react_frontend/package.json
+++ b/FrontEnd/react_frontend/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2-react-maps": "^19.1.63",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.0.1",
+    "google-map-react": "^2.1.9",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-google-maps": "^9.4.5",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recompose": "^0.30.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
