--- a/FrontEnd/react_frontend/package.json
+++ b/FrontEnd/react_frontend/package.json
@@ -8,12 +8,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.1",
-    "google-map-react": "^2.1.9",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
-    "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
+    "react-leaflet": ">=3.1.0 <3.2.0 || ^3.2.1",
+    "@react-leaflet/core": ">=1.0.0 <1.1.0 || ^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recompose": "^0.30.0",
