--- a/FrontEnd/react_frontend/package.json
+++ b/FrontEnd/react_frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@react-leaflet/core": ">=1.0.0 <1.1.0 || ^1.1.1",
     "@syncfusion/ej2-react-maps": "^19.1.63",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -14,10 +16,8 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-leaflet": ">=3.1.0 <3.2.0 || ^3.2.1",
-    "@react-leaflet/core": ">=1.0.0 <1.1.0 || ^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "recompose": "^0.30.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
