--- a/MobileApp/Camera/app/build.gradle
+++ b/MobileApp/Camera/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.example.camera"
@@ -20,6 +21,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            manifestPlaceholders = [usesCleartextTraffic:"true"]
+        }
+        build{
+            manifestPlaceholders = [usesCleartextTraffic:"true"]
         }
     }
     compileOptions {
@@ -41,5 +46,6 @@ dependencies {
     def cameraxVersion = "1.0.0-alpha02"
     implementation "androidx.camera:camera-core:${cameraxVersion}"
     implementation "androidx.camera:camera-camera2:${cameraxVersion}"
+    compile 'com.squareup.okhttp3:okhttp:3.7.0'
 
 }
