--- a/MobileApp/Camera/app/build.gradle
+++ b/MobileApp/Camera/app/build.gradle
@@ -46,6 +46,6 @@ dependencies {
     def cameraxVersion = "1.0.0-alpha02"
     implementation "androidx.camera:camera-core:${cameraxVersion}"
     implementation "androidx.camera:camera-camera2:${cameraxVersion}"
-    compile 'com.squareup.okhttp3:okhttp:3.7.0'
+    implementation 'com.squareup.okhttp:okhttp:2.7.5'
 
 }
