Added new files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 # Document files
 Projektna naloga.odp
 MobileApp/MyApplication/local.properties
+MobileApp/Camera/local.properties
+Porocilo_SA_3.pdf
