removed ports from urls on react

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,13 @@ services:
       - tensor
     depends_on:
       - mongo
-    networks:
-      - roadscannernetwork
+    # networks:
+    #   - roadscannernetwork
   tensor:
     container_name: tensor
     build: ./BackEnd/ObjectRecognition
-    networks:
-      - roadscannernetwork
+    # networks:
+    #   - roadscannernetwork
   react:
     container_name: reactapp
     image: react_img
@@ -28,15 +28,15 @@ services:
       - "3000:3000"
     links:
       - "api"
-    networks:
-      - roadscannernetwork
+    # networks:
+    #   - roadscannernetwork
   mongo:
     container_name: mongo
     image: mongo
     ports:
       - "27017:27017"
-    networks:
-      - roadscannernetwork
-networks:
-  roadscannernetwork:
-    driver: bridge
+#     networks:
+#       - roadscannernetwork
+# networks:
+#   roadscannernetwork:
+#     driver: bridge
