removed react links in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,8 @@ services:
     command: "npm start"
     ports:
       - "3000:3000"
-    links:
-      - "api"
+    # links:
+    #   - "api"
     # networks:
     #   - roadscannernetwork
   mongo:
