--- a/BackEnd/ObjectRecognition/Dockerfile
+++ b/BackEnd/ObjectRecognition/Dockerfile
@@ -4,4 +4,4 @@ RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 COPY . .
 EXPOSE 8000
-CMD ["uvicorn", "main:app"]
+CMD ["uvicorn", "main:app", "--reload"]
