added pip install

--- a/BackEnd/ObjectRecognition/Dockerfile
+++ b/BackEnd/ObjectRecognition/Dockerfile
@@ -1,5 +1,5 @@
 FROM tensorflow/tensorflow:2.5.0
-RUN pip install Opencv-python Numpy Cvlib Requests Imutils Pytesseract matplotlib scikit-image fastapi uvicorn==0.16.0
+RUN pip install opencv-python opencv-python-headless Numpy Cvlib Requests Imutils Pytesseract matplotlib scikit-image fastapi uvicorn==0.16.0
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 COPY . .
